tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_66.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (((+ (1 MOD z)) MOD (+ (x DIV 200))) MOD (((0 + y) * (- 2)) * ((0 DIV 1223) DIV (200 DIV 200))));
               x := ((((- 2) - (- 200)) MOD ((1223 MOD 1223) * (- 0))) DIV (- (+ (y + 1223))));
               x := ((- ((z * 2) DIV (0 - 2))) * (+ (+ (200 * x))));
               r := ((((- x) MOD (- 2)) # (- (0 * 1223))) OR (~ ((+ 200) < (+ 2))));
               r := (((+ (x MOD x)) = ((1 * 0) * (x DIV 0))) & (((- y) - (x + z)) < ((+ x) DIV (y DIV 200))));
  (* error *)  q := ((((q * 0) + (x - 2)) # ((+ y) * (1223 + 1223))) OR (~ (~ (q OR p))));
               q := ((+ ((+ 0) * (- z))) <= ((+ (1 - 200)) * ((1 * 1223) + (+ 1))));
               y := (+ (+ ((2 + 1) + (+ 1))));
               q := (((- (0 MOD y)) - ((- 0) * (0 DIV 2))) <= (((2 + z) DIV (2 DIV 200)) - ((1223 * y) - (1 DIV x))));
               y := (- (((- x) * (0 + 2)) MOD ((+ 1223) + (1 - z))))
END Test16.